# OpenChisel

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt
include/open_chisel/: CMakeLists.txt  Chisel.h  Chunk.h  ChunkManager.h  ColorVoxel.h  DistVoxel.h  FixedPointFloat.h  ProjectionIntegrator.h
include/open_chisel/camera/: ColorImage.h  DepthImage.h  Intrinsics.h  PinholeCamera.h
include/open_chisel/geometry/: AABB.h  Frustum.h  Geometry.h  Interpolate.h  Plane.h  Raycast.h
include/open_chisel/io/: PLY.h
include/open_chisel/marching_cubes/: MarchingCubes.h
include/open_chisel/mesh/: Mesh.h
include/open_chisel/pointcloud/: PointCloud.h
include/open_chisel/threading/: Threading.h
include/open_chisel/truncation/: ConstantTruncator.h  QuadraticTruncator.h  Truncator.h
include/open_chisel/weighting/: ConstantWeighter.h  Weighter.h
src/: CMakeLists.txt  Chisel.cpp  Chunk.cpp  ChunkManager.cpp  ColorVoxel.cpp  DistVoxel.cpp  ProjectionIntegrator.cpp
src/camera/: Intrinsics.cpp  PinholeCamera.cpp
src/geometry/: AABB.cpp  Frustum.cpp  Plane.cpp  Raycast.cpp
src/io/: PLY.cpp
src/marching_cubes/: MarchingCubes.cpp
src/mesh/: Mesh.cpp
src/pointcloud/: PointCloud.cpp
